--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/gtag.js": "^0.0.14",
+    "@types/node": "^22.10.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.15",
@@ -50,6 +51,8 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.7",
     "escape-html": "^1.0.3",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "postgres": "^3.4.4",
     "prismjs": "^1.29.0",
     "shiki": "^0.14.4",
