--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
+    "baseUrl": "src",
+    "paths": {
+      "$lib/*": ["lib/*"]
+    },
     "plugins": [
       {
         "name": "typescript-svelte-plugin"
@@ -20,3 +24,4 @@
   // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
   // from the referenced tsconfig.json - TypeScript does not merge them in
 }
+
